# promtior-chatbot

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
src/: create_datastore.py  rag.py
src/data/: aboutPromtior.txt
static/: index.html
